Upgrade spring boot version, kotlin Use java 13 Replace springfox by springdoc